@@ -1,5 +1,6 @@
 package dev.latvian.kubejs;
 
+import com.google.common.base.Stopwatch;
 import dev.latvian.kubejs.block.events.KubeJSBlockEventHandler;
 import dev.latvian.kubejs.client.KubeJSClient;
 import dev.latvian.kubejs.entity.KubeJSEntityEventHandler;
@@ -25,8 +26,9 @@ import dev.latvian.kubejs.util.UtilsJS;
 import dev.latvian.kubejs.world.KubeJSWorldEventHandler;
 import dev.latvian.kubejs.world.gen.FlatChunkGeneratorKJS;
 import lombok.val;
+import me.shedaniel.architectury.platform.Mod;
 import me.shedaniel.architectury.platform.Platform;
-import me.shedaniel.architectury.utils.EnvExecutor;
+import me.shedaniel.architectury.utils.Env;
 import net.minecraft.core.Registry;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.CreativeModeTab;
@@ -40,7 +42,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.List;
 import java.util.Locale;
 
 /**
@@ -50,6 +51,7 @@ public class KubeJS {
 	public static final String MOD_ID = "kubejs";
 	public static final String MOD_NAME = "KubeJS";
 	public static final Logger LOGGER = LogManager.getLogger(MOD_NAME);
+    public static Mod thisMod;
 
 	public static ResourceLocation id(String path) {
 		return new ResourceLocation(MOD_ID, path);
@@ -69,34 +71,42 @@ public class KubeJS {
 
 	public KubeJS() throws Throwable {
 		instance = this;
+        thisMod = Platform.getMod(MOD_ID);
 		Locale.setDefault(Locale.US);
 		new KubeJSBackgroundThread().start();
 
 		if (Files.notExists(KubeJSPaths.README)) {
-			UtilsJS.tryIO(() -> {
-				List<String> list = new ArrayList<>();
-				list.add("Find more info on the website: https://kubejs.com/");
-				list.add("");
-				list.add("Directory information:");
-				list.add("");
-				list.add("assets - Acts as a resource pack, you can put any client resources in here, like textures, models, etc. Example: assets/kubejs/textures/item/test_item.png");
-				list.add("data - Acts as a datapack, you can put any server resources in here, like loot tables, functions, etc. Example: data/kubejs/loot_tables/blocks/test_block.json");
-				list.add("");
-				list.add("startup_scripts - Scripts that get loaded once during game startup - Used for adding items and other things that can only happen while the game is loading (Can be reloaded with /kubejs reload_startup_scripts, but it may not work!)");
-				list.add("server_scripts - Scripts that get loaded every time server resources reload - Used for modifying recipes, tags, loot tables, and handling server events (Can be reloaded with /reload)");
-				list.add("client_scripts - Scripts that get loaded every time client resources reload - Used for JEI events, tooltips and other client side things (Can be reloaded with F3+T)");
-				list.add("");
-				list.add("config - KubeJS config storage. This is also the only directory that scripts can access other than world directory");
-				list.add("exported - Data dumps like texture atlases end up here");
-				list.add("");
-				list.add("You can find type-specific logs in logs/kubejs/ directory");
-				Files.write(KubeJSPaths.README, list);
-			});
+			UtilsJS.tryIO(() -> Files.writeString(KubeJSPaths.README, """
+                Find out more info on the website: https://kubejs.com/
+                
+                Directory information:
+                
+                assets - Acts as a resource pack, you can put any client resources in here, like textures, models, etc. Example: assets/kubejs/textures/item/test_item.png
+                data - Acts as a datapack, you can put any server resources in here, like loot tables, functions, etc. Example: data/kubejs/loot_tables/blocks/test_block.json
+                
+                startup_scripts - Scripts that get loaded once during game startup - Used for adding items and other things that can only happen while the game is loading (Can be reloaded with '/kubejs reload startup_scripts')
+                server_scripts - Scripts that get loaded every time server resources reload - Used for modifying recipes, tags, loot tables, and handling server events (Can be reloaded with /reload or '/kubejs reload server_scripts')
+                client_scripts - Scripts that get loaded every time client resources reload - Used for JEI events, tooltips and other client side things (Can be reloaded with F3+T or '/kubejs reload client_scripts')
+                
+                config - KubeJS config storage. This is also the only directory that scripts can access other than world directory
+                exported - Data dumps like texture atlases end up here
+                
+                You can find type-specific logs in logs/kubejs/ directory"""));
 		}
 
-		PROXY = EnvExecutor.getEnvSpecific(() -> KubeJSClient::new, () -> KubeJSCommon::new);
+        PROXY = Platform.getEnvironment() == Env.CLIENT
+            ? new KubeJSClient()
+            : new KubeJSCommon();
 
-        KubeJSPlugins.initFromMods();
+        {
+            val pluginTimer = Stopwatch.createStarted();
+            LOGGER.info("Looking for KubeJS plugins...");
+            val allMods = new ArrayList<>(Platform.getMods());
+            allMods.remove(thisMod);
+            allMods.addFirst(thisMod);
+            KubeJSPlugins.load(allMods);
+            LOGGER.info("Done in {}", pluginTimer.stop());
+        }
 
 		startupScriptManager = new ScriptManager(ScriptType.STARTUP, KubeJSPaths.STARTUP_SCRIPTS, "/data/kubejs/example_startup_script.js");
 		clientScriptManager = new ScriptManager(ScriptType.CLIENT, KubeJSPaths.CLIENT_SCRIPTS, "/data/kubejs/example_client_script.js");
@@ -142,17 +152,21 @@ public class KubeJS {
 
 		val pathPrefix = path;
 
-		UtilsJS.tryIO(() -> Files
-				.walk(dir, 10)
-				.filter(Files::isRegularFile)
-				.map(file -> dir.relativize(file).toString().replace(File.separatorChar, '/'))
-				.filter(name -> name.endsWith(".js"))
-				.forEach(fileName -> pack.info.scripts.add(new ScriptFileInfo(pack.info, pathPrefix + fileName))));
-	}
+        UtilsJS.tryIO(() -> Files
+            .walk(dir, 10)
+            .filter(Files::isRegularFile)
+            .map(file -> dir.relativize(file).toString().replace(File.separatorChar, '/'))
+            .filter(name -> name.endsWith(".js"))
+            .forEach(fileName -> pack.info.scripts.add(new ScriptFileInfo(pack.info, pathPrefix + fileName))));
+    }
 
 	public static String appendModId(String id) {
 		return id.indexOf(':') == -1 ? (MOD_ID + ":" + id) : id;
 	}
+
+    public static ResourceLocation rl(String path) {
+        return new ResourceLocation(MOD_ID, path);
+    }
 
 	public static Path getGameDirectory() {
 		return Platform.getGameFolder();
@@ -174,7 +188,7 @@ public class KubeJS {
 		UtilsJS.init();
 		KubeJSNet.init();
 		new StartupEventJS().post(ScriptType.STARTUP, KubeJSEvents.INIT);
-		Registry.register(Registry.CHUNK_GENERATOR, new ResourceLocation(KubeJS.MOD_ID, "flat"), FlatChunkGeneratorKJS.CODEC);
+		Registry.register(Registry.CHUNK_GENERATOR, rl("flat"), FlatChunkGeneratorKJS.CODEC);
 		//KubeJSRegistries.chunkGenerators().register(new ResourceLocation(KubeJS.MOD_ID, "flat"), () -> FlatChunkGeneratorKJS.CODEC);
 	}
 
